components/Nav/nav.module.scss
@import "styles/vars";

.nav {
  margin: 24px 0 30px;
}

.logo {
  display: block;
  margin: 0 auto 24px;
  width: 100px;
}

.links {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.link {
  flex-shrink: 0;
  margin: 0 10px;
}

@media (min-width: $tablet-min-width) {
  .nav {
    align-items: center;
    display: flex;
    justify-content: space-between;
  }

  .logo {
    margin: 0;
  }
}

